<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">UEFA Quiz</string>
    <string name="name">Name</string>
    <string name="_1_when_was_uefa_champion_league_founded">1. When was UEFA Champions league founded?</string>
    <string name="_1920">1920</string>
    <string name="_1987">1987</string>
    <string name="_1892">1892</string>
    <string name="_1955">1955</string>
    <string name="_2_what_is_the_name_of_the_most_successful_club_in_uefa">2. What is the name of the most successful club in UEFA?</string>
    <string name="ac_milan">AC Milan</string>
    <string name="chelsea">Chelsea</string>
    <string name="real_madrid">Real Madrid</string>
    <string name="bayern_munich">Bayern Munich</string>
    <string name="_3_which_clubs_has_won_uefa_title_6_times_each">3. Which clubs has won UEFA title 6 times each?</string>
    <string name="liverpool">Liverpool</string>
    <string name="atl_tico_madrid">Atlético Madrid</string>
    <string name="barcelona">Barcelona</string>
    <string name="_4_which_clubs_has_been_runners_up_3_times_each_in_uefa">4. Which clubs has been runners up 3 times each in UEFA?</string>
    <string name="benfica">Benfica</string>
    <string name="valencia">Valencia</string>
    <string name="_5_what_continent_is_uefa_champions_league_played_in">5. What continent is UEFA Champions League played in?</string>
    <string name="asia">Asia</string>
    <string name="africa">Africa</string>
    <string name="europe">Europe</string>
    <string name="america">America</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="hello">Hello</string>
    <string name="your_score">Your score is</string>
    <string name="of">of 6.</string>
    <string name="correct_answer_in_green">The correct answer if chosen rightly is in Green.</string>
    <string name="wrong_answer_in_red">The wrong answers are displayed in Red.</string>
    <string name="click_the_reset">Click the reset button to start the quiz again</string>
    <string name="_6_who_is_the_all_time_top_scorer_of_uefa_champions_league">6. Who is the all-time top scorer of UEFA Champions League?</string>
    <string name="enter_your_answer_here">Enter your answer here</string>
</resources>